mudei o workflow pra testes

--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -1,10 +1,10 @@
-name: build
+name: build testes
 
 on:
   push:
-    branches: [ main ]
+    branches: [ testes ]
   pull_request:
-    branches: [ main ]
+    branches: [ testes ]
 
 jobs:
   build:
